public interface Loadable {
    void loadCarOnTransporter();
    void unloadCarFromTransporter();
}
